--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/datetime-picker": "^10.2.1",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,12 +11,16 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.4",
     "bootstrap": "^5.0.1",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.8",
     "react-router-dom": "^5.2.0",
